<resources>
    <string name="app_name">Foodify</string>
    <string name="category">Category</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="our_popular_item">Our Popular Item</string>
    <string name="area">Area :</string>
    <string name="instructions">Instructions</string>
    <string name="meal_id">MEAL_ID</string>
    <string name="meal_name">MEAL_NAME</string>
    <string name="meal_thumb">MEAL_THUMB</string>
    <string name="category_name">Category Name</string>
    <string name="category_name_category_count">Category Name: Category Count</string>
    <string name="category_name_extra">CATEGORY_NAME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more ...</string>
    <string name="testtest">testtest</string>
    <string name="enter_meal_name">"Enter Meal Name . . . "</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="explore_our_categories">Explore Our Categories</string>
</resources>