<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_21ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/home"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/header"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <ImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@color/accent"
                    android:contentDescription="@string/our_popular_item" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/our_popular_item"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/random_meal_card"
                app:layout_constraintTop_toBottomOf="@id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/recycler_view_meals_popular"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_meals_popular" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>