<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/favourites"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:src="@drawable/ic_favourites"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar"
        android:contentDescription="@string/favourites"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/white"
        android:focusable="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/meal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:visibility="invisible"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_15sdp"
                    android:textColor="@color/g_black"
                    android:textSize="@dimen/_14sdp"
                    app:drawableLeftCompat="@drawable/ic_category"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/area"
                    android:visibility="invisible"
                    android:textColor="@color/g_black"
                    android:textSize="@dimen/_14sdp"
                    app:drawableLeftCompat="@drawable/ic_area"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="invisible"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meal_info" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_youtube"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/instructions"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/yt_icon" />

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:visibility="visible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>